@@ -110,6 +110,7 @@
 61. Add a 1 pixel border around large cover in top-left corner.
 62. When refresh button is pressed send an update and stats request to MPD.
 63. Hard-code black background and gray text for cover widget tooltip.
+64. Ignore quit action if we have open dialogs.
 
 0.8.3.1
 -------
